--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'plugin'
-version = '1.1'
+version = '1.1.2'
 
 tasks {
     runServer {
@@ -50,5 +50,11 @@ processResources {
     filteringCharset 'UTF-8'
     filesMatching('plugin.yml') {
         expand props
+    }
+}
+
+task getCurrentVersion {
+    doFirst {
+        System.out.println(version)
     }
 }
